--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             <button class="btn btn--grey">Vitejte!</button>
         </div>
     </section>
-    <script type="text/javascript" src="js/scripts.js></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
